--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @layer base {
+@layer base {
 	h1 {
 		@apply text-5xl;
 	}
@@ -18,4 +18,4 @@
 	h5 {
 		@apply text-xl;
 	}
-} */
+}
