--- a/src/app.css
+++ b/src/app.css
@@ -18,4 +18,18 @@
 	h5 {
 		@apply text-xl;
 	}
+	ul {
+		@apply list-disc;
+	}
+	ol {
+		@apply list-decimal;
+	}
+}
+
+code {
+	font-family: Consolas, 'courier new';
+	color: crimson;
+	background-color: #f1f1f1;
+	padding: 2px;
+	font-size: 105%;
 }
