--- a/src/app.scss
+++ b/src/app.scss
@@ -34,3 +34,19 @@ code {
 	padding: 2px;
 	font-size: 105%;
 }
+
+.svelte-select-list {
+	--tw-bg-opacity: 1 !important;
+	background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
+
+	.hover {
+		color: black !important;
+	}
+
+	.value-container {
+		.multi-item {
+			--tw-bg-opacity: 1 !important;
+			background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
+		}
+	}
+}
